fixed profile pic flicker issue from safari

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -15,6 +15,7 @@
 
         .imgContainer {
             height: 100%;
+            width: 50vw;
             overflow: hidden;
             display: flex;
             align-items: flex-end;
