--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -50,6 +50,7 @@
                 
                 a:hover{ 
                     -webkit-transform: scale(1.2); 
+                    transform: scale(1.2);
                 }
 
                 .icon {
